# BharathLLM

./: .env.example  .gitignore  README.md  complete_prompt_v3.1.txt  fix_all_gaps_prompts.txt  issues_and_gaps_prompts.txt  patch_main.py  patch_v3.1.txt  pyproject.toml  run_dev.py  specialist_prompts.txt  test_auth.db  test_auth.py  test_db_auth.py  test_db_auth_2.db  test_engines.py  test_multimodal.py  test_web_search.py  test_whatsapp.py
agents/: prompts.py  specialist_agents.py  supervisor.py  task_templates.py  tool_registry.py
alembic/: env.py
alembic/versions/: 8698d824cd71_initial_schema.py
api/: __init__.py  database.py  db_models.py  main.py  multimodal_routes.py  upsc_routes.py  whatsapp_webhook.py
auth/: __init__.py  auth_service.py  dependencies.py  rate_limiter.py  seed_admin.py
data/: dev.sqlite3
deploy/: docker-compose.yml  prometheus.yml
deploy/k8s/: redis-deployment.yaml  (+1 more)
evaluation/: benchmark.py  curate_eval_dataset.py  eval_dataset.json  validate_e2e.py  validation_report.html  validation_report.json
frontend/: index.html  package-lock.json  package.json
models/: finetune.py
pipeline/: __init__.py  build_training_data.py  cache_layer.py  chunker.py  cleaner.py  collection_registry.json  embed_and_store.py  finance_engine.py  healthcare_engine.py  hr_engine.py  ingest.py  ingest_finance.py  ingest_legal.py  language_registry.py  legal_engine.py  legal_entity_extractor.py  metadata_extractor.py  query_router.py  rag_engine.py  realestate_engine.py  sql_engine.py  upsc_engine.py  vision_engine.py  voice_engine.py  web_search_engine.py
workers/: __init__.py  celery_app.py  job_store.py  scheduled_tasks.py  start_beat.sh  start_worker.sh  start_worker_cpu.sh  start_worker_gpu.sh  tasks.py
(+17 files in other folders)
